# EUDI-Adapter

./: .env.example  .gitignore  NorthStar.md  README.md  pyproject.toml
backend/app/: main.md  main.py
docs/: glossary.md  project_scope.md
docs/cheatsheets/: terminal_git_workflow_cheatsheet.md
docs/plan/: learning_plan.md  plan_stages.md  plan_weeks.md
docs/process/: mentored_development_workflow.md
docs/protocol/: 2026-05-21_protocol.md  connection_test.md
notebooks/EUDI_Notebook_Architectur_Law_Ecosystem/: 2026-05-21__README.md  2026-05-21__glossary.md  2026-05-21__open_questions.md  2026-05-21__research_plan.md  2026-05-21__source_register.md  2026-05-21__workflow.md  2026-05-25__glossary.md  2026-05-26__glossary.md  eudi_notebook_architecture_law_ecosystem_template.md  learning_plan.md
notebooks/EUDI_Notebook_Architectur_Law_Ecosystem/01_source_notes/: 2026-05-22__arf_overview.md  2026-05-26__eudi_wallet_basics.md
notebooks/EUDI_Notebook_Architectur_Law_Ecosystem/02_concept_notes/: 2026-05-26__pid_eaa_qeaa.md  2026-05-26__selective_disclosure_privacy_warnings.md  2026-05-26__wallet_roles.md
notebooks/EUDI_Notebook_Architectur_Law_Ecosystem/03_project_relevance/: 2026-05-26__ecosystem_roles_relevance_matrix.md
notebooks/Learning_Notebook_Theory_Skills/: learning_notebook_theory_skills_clean_visual_template.md
notebooks/Project_Notebook_Build_Log_Documentation/: Project_Notebook_Build_Log_Template.md
notebooks/Scratch_Notebook_Fast_Notes_Ideas_Messy_Thinking/: README.md  scratch_notebook_fast_notes_template.md
(+13 files in other folders)
